--- a/chats.html
+++ b/chats.html
@@ -34,6 +34,7 @@
     </header>
 
     <main class="main-screen">
+      <a href="chat.html">
       <div class="user-component chats-component">
         <div class="user-component__column">
           <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar" />
@@ -46,8 +47,8 @@
             <span class="user-component__time">21:22</span>
             <div class="badge">1</div>
         </div>
-      
-    </div>
+      </div>
+      </a>
     </main>
     
     <nav class="nav">
@@ -76,6 +77,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
